[project]
name = "music-source-separation-training"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "James Walker", email = "james.chunho@gmail.com" }
]
dependencies = [
    "torch==2.3.1+cu121",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/music_source_separation_training"]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
